# ideacheck

./: .gitignore  LICENSE  README.md  SKILL.md  axv.py  pyproject.toml  render.py
.claude/commands/: ideacheck.md
ideacheck/: __init__.py  agents.py  cli.py  config.py  oai_agents.py  oai_pipeline.py  pipeline.py  report.py  server.py  tools.py
paper-podcast/: SKILL.md
paper-podcast/scripts/: tts.py  workflow_template.js
